--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="show_location">Show Location</string>
     <string name="name_label">Name of Category</string>
+    <string name="title_activity_list_of_events">ListOfEventsActivity</string>
+    <string name="tab_text_1">My events</string>
+    <string name="tab_text_2">Other events</string>
 
 </resources>
