--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="show_location">Show Location</string>
     <string name="name_label">Name of Category</string>
 
+    <string name="close_drawer_content">Close Menu</string>
+    <string name="open_drawer_content">Open Menu</string>
+
 </resources>
